# mosaicOS

./: .dockerignore  .gitignore  LICENSE  README.md  milestone-00-documentation.md  milestone-01-l4re-laboratory.md  milestone-02-minimal-init.md  milestone-03-service-manager.md  milestone-04-recovery-prototype.md  milestone-05-graphical-prototype.md  milestone-06-translator-prototype.md  milestone-07-container-prototype.md  milestone-08-wasm-runtime.md  milestone-09-linux-personality.md  mosaicos_planejamento.html
docs/: app-model.md  architecture.md  boot-flow.md  containers.md  graphics-stack.md  lab-setup.md  recovery.md  roadmap.md  service-model.md  translators.md
graphics/compositor/: Cargo.toml  Makefile
graphics/compositor/src/: lib.rs
graphics/display-server/: Cargo.toml  Makefile
graphics/display-server/src/: lib.rs
graphics/gui-protocol/: README.md
graphics/input-server/: Cargo.toml  Makefile
graphics/input-server/src/: lib.rs
microkernel/experiments/compositor/: Makefile  main.c
microkernel/experiments/compositor-crash/: Makefile  main.c
microkernel/experiments/crash/: Makefile  main.c
microkernel/experiments/display/: Makefile  main.cc
microkernel/experiments/graphical-hello/: Makefile  main.c
sdk/gui-sdk/: Cargo.toml
sdk/ipc-api/: compositor.rs  display.rs
sdk/l4-rust/: Cargo.toml
tools/: README.md
tools/lab/: Dockerfile  build-hello.sh  build-kernel.sh  build-l4re.sh  env.sh  run-qemu.sh  setup.sh  test-graphical-recovery.sh  test-graphical.sh  test-recovery.sh  test-service-manager.sh
translators/: README.md
(+39 files in other folders)
